# DotMatrix

./: .gitignore  .gitmodules  Cargo.toml
.github/workflows/: rust.yml
core/: Cargo.toml
core/src/: bus.rs  cartridge.rs  cpu.rs  lib.rs
core/src/cpu/: mcode.rs
core/tests/: blargg_cpu.rs  single_step_tests.rs
opcodes/: Cargo.toml  build.rs  opcodes.json
opcodes/src/: lib.rs  mcode.rs
