[package]
name = "dotmatrix"
version.workspace = true
edition.workspace = true

[dependencies]
dotmatrix_opcodes.workspace = true
proc-bitfield.workspace = true

[dev-dependencies]
paste.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with.workspace = true
