[package]
name = "dotmatrix_opcodes"
version.workspace = true
edition.workspace = true

[build-dependencies]
anyhow.workspace = true
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
syn.workspace = true
